# databot

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  run_tests.sh  visual.py
agents/: sql_agents.py
chatbot/agents/: analysis.py  chatbot.py  rag.py  sql.py
chatbot/graph/: nodes.py  utils.py  workflow.py
chatbot/graph/subgraphs/analysis/: nodes.py  utils.py  workflow.py
chatbot/graph/subgraphs/rag/: nodes.py  utils.py  workflow.py
chatbot/graph/subgraphs/sql/: nodes.py  teste.py  utils.py  workflow.py
chatbot/schemas/: schemas.py
chatbot/sql/: connection.py
chatbot/tools/: analysis.py  chatbot.py  sql.py  utils.py
databot/: run.py  utils.py
databot/agents/: analysis.py  databot.py  sql.py
databot/graph/: README.md  nodes.py  utils.py  workflow.py
databot/graph/subgraphs/analysis/: README.md  nodes.py  utils.py  workflow.py
databot/graph/subgraphs/sql/: README.md  nodes.py  utils.py  workflow.py
databot/schemas/: schemas.py
databot/sql/: connection.py
databot/tools/: analysis.py  databot.py  sql.py
graph/sql_subgraph/: sql_nodes.py  sql_workflow.py
tests/agentic/: README.md  accuracy.json  llm.py  questions.json  results.json  tests.py
tests/analyst/: README.md  questions.json  results.json  tests.py
tests/analyst/data/: generate_csv.py  sql.json
tests/analyst/data/csv/: 1.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv
tests/complete/: README.md  questions.json  tests.py
tests/sql/: README.md  accuracy.json  questions.json  results.json  tests.py
tools/: sql_tools.py
(+13 files in other folders)
